--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@framing/ng-ui",
   "description": "Framing UI",
-  "version": "0.1.30",
+  "version": "0.1.31",
   "main": "index.js",
   "typings": "index.d.ts",
   "private": false,
@@ -9,7 +9,7 @@
     "dev": "tsc --watch",
     "tsc": "tsc",
     "tslint": "tslint -c ./tslint.json src/**/*.ts --exclude=src/**/*.d.ts",
-    "prepublish": "npm run clean; npm run tsc; npm run tslint",
+    "prepublish": "npm-run-all clean tsc tslint",
     "clean": "rm -f ./*.d.ts; rm -f ./src/*.d.ts; rm -f ./src/**/*.d.ts; rm -f ./*.js; rm -f ./src/*.js; rm -f ./src/**/*.js; rm -f ./*.js.map; rm -f ./src/*.js.map; rm -f ./src/**/*.js.map"
   },
   "author": "",
@@ -27,7 +27,7 @@
     "@angular/router": "4.0.0-beta.6",
     "@angular/material": "2.0.0-beta.1",
     "@biznas/ng-core": "0.4.13",
-    "@framing/ng-core": "0.1.30",
+    "@framing/ng-core": "0.1.31",
     "angular": "1.6.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
