--- a/package.json
+++ b/package.json
@@ -75,8 +75,9 @@
     "html-webpack-plugin": "2.21.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
-    "nodemon": "^1.10.0",
     "node-sass": "3.10.0",
+    "nodemon": "^1.10.0",
+    "npm-run-all": "^4.0.2",
     "null-loader": "0.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
@@ -97,8 +98,8 @@
     "webpack-dependency-suite": "1.5.0",
     "webpack-dev-middleware": "1.9.0",
     "webpack-dev-server": "2.2.0-rc.0",
-    "webpack-stream": "3.2.0",
     "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "~0.16.0"
+    "webpack-merge": "~0.16.0",
+    "webpack-stream": "3.2.0"
   }
 }
