--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@framing/ng-ui",
   "description": "Framing UI",
-  "version": "0.1.32",
+  "version": "0.1.33",
   "main": "index.js",
   "typings": "index.d.ts",
   "private": false,
@@ -15,19 +15,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "4.0.0-beta.6",
-    "@angular/compiler": "4.0.0-beta.6",
-    "@angular/compiler-cli": "4.0.0-beta.6",
-    "@angular/core": "4.0.0-beta.6",
-    "@angular/forms": "4.0.0-beta.6",
-    "@angular/http": "4.0.0-beta.6",
-    "@angular/platform-browser": "4.0.0-beta.6",
-    "@angular/platform-browser-dynamic": "4.0.0-beta.6",
-    "@angular/platform-server": "4.0.0-beta.6",
-    "@angular/router": "4.0.0-beta.6",
+    "@angular/common": "^4.0.0-rc.1",
+    "@angular/compiler": "^4.0.0-rc.1",
+    "@angular/compiler-cli": "^4.0.0-rc.1",
+    "@angular/core": "^4.0.0-rc.1",
+    "@angular/forms": "^4.0.0-rc.1",
+    "@angular/http": "^4.0.0-rc.1",
+    "@angular/platform-browser": "^4.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^4.0.0-rc.1",
+    "@angular/platform-server": "^4.0.0-rc.1",
+    "@angular/router": "^4.0.0-rc.1",
     "@angular/material": "2.0.0-beta.1",
-    "@biznas/ng-core": "0.4.13",
-    "@framing/ng-core": "0.1.32",
+    "@biznas/ng-core": "0.4.14",
+    "@framing/ng-core": "0.1.33",
     "angular": "1.6.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
